force-app/main/default/objects/Flex_Log__c/Flex_Log__c.object-meta.xml
<CustomObject>
    <label>Flex Log</label>
    <nameField>
        <displayFormat>Log-{00000}</displayFormat>
        <label>Flex Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Flex Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>