force-app/main/default/objects/Flex_Log__c/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to the related Account</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Flex Logs</relationshipLabel>
    <relationshipName>Flex_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>