force-app/main/default/objects/Flex_Log__c/fields/AmendedOpportunityId__c.field-meta.xml
<CustomField>
    <fullName>AmendedOpportunityId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to the amended Opportunity.</description>
    <label>Amended Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Flex Logs</relationshipLabel>
    <relationshipName>Flex_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>