force-app/main/default/objects/Flex_Log__c/fields/AmendedQuoteId__c.field-meta.xml
<CustomField>
    <fullName>AmendedQuoteId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Cancellation Quote</description>
    <inlineHelpText>Cancellation Quote</inlineHelpText>
    <label>Amended Quote</label>
    <referenceTo>SBQQ__Quote__c</referenceTo>
    <relationshipLabel>Flex Logs (Amended Quote)</relationshipLabel>
    <relationshipName>Flex_Logs1</relationshipName>
    <type>Lookup</type>
</CustomField>