force-app/main/default/objects/Flex_Log__c/fields/AmendFutureMethodId__c.field-meta.xml
<CustomField>
    <fullName>AmendFutureMethodId__c</fullName>
    <description>ID of the future method for amendment tracking.</description>
    <label>Amend Future Method Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>