force-app/main/default/objects/Flex_Log__c/fields/ContractId__c.field-meta.xml
<CustomField>
    <fullName>ContractId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to the related Contract</description>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Flex Logs</relationshipLabel>
    <relationshipName>Flex_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>