force-app/main/default/objects/Flex_Log__c/fields/Log_Group_Id__c.field-meta.xml
<CustomField>
    <fullName>Log_Group_Id__c</fullName>
    <formula>AccountId__c + &apos; &apos; + TEXT(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Log Group Id</label>
    <type>Text</type>
</CustomField>