force-app/main/default/objects/Flex_Log__c/fields/RecalculateFutureMethod__c.field-meta.xml
<CustomField>
    <fullName>RecalculateFutureMethod__c</fullName>
    <label>RecalculateFutureMethod</label>
    <length>18</length>
    <type>Text</type>
</CustomField>