force-app/main/default/objects/Flex_Log__c/fields/RevenueOpportunityId__c.field-meta.xml
<CustomField>
    <fullName>RevenueOpportunityId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to the revenue Opportunity</description>
    <label>Revenue Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Flex Logs (Revenue Opportunity)</relationshipLabel>
    <relationshipName>Flex_Logs1</relationshipName>
    <type>Lookup</type>
</CustomField>