force-app/main/default/objects/Flex_Log__c/fields/RevenueQuoteId__c.field-meta.xml
<CustomField>
    <fullName>RevenueQuoteId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The new upgraded quote</description>
    <inlineHelpText>The new upgraded quote</inlineHelpText>
    <label>Revenue Quote</label>
    <referenceTo>SBQQ__Quote__c</referenceTo>
    <relationshipLabel>Flex Logs (Revenue Quote)</relationshipLabel>
    <relationshipName>Flex_Logs2</relationshipName>
    <type>Lookup</type>
</CustomField>