force-app/main/default/objects/Flex_Log__c/fields/SnapshotQuoteId__c.field-meta.xml
<CustomField>
    <fullName>SnapshotQuoteId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Snapshot Quote</label>
    <referenceTo>SBQQ__Quote__c</referenceTo>
    <relationshipLabel>Flex Logs (Snapshot Quote)</relationshipLabel>
    <relationshipName>Flex_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>