force-app/main/default/objects/Flex_Log__c/fields/UserNotified__c.field-meta.xml
<CustomField>
    <fullName>UserNotified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the user was notified</description>
    <label>User Notified</label>
    <type>Checkbox</type>
</CustomField>